KAN-156 fix: 액션바, 토스트 z-index 수정

--- a/src/app/components/action-bar/ActionBar.module.scss
+++ b/src/app/components/action-bar/ActionBar.module.scss
@@ -17,7 +17,7 @@
   gap: 1rem;
 
   background-color: color.$alert-secondary-0;
-  z-index: 1;
+  z-index: 200;
 }
 
 // 액션바 내부 컨테이너
